<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">module_mine</string>
    <string name="title_mine">我的</string>
    <string name="webLoginPermission">WEB端登录权限</string>
    <string name="openLockVoice">开锁声音</string>
    <string name="lockUserManager">锁用户管理</string>
    <string name="lockGroup">锁分组</string>
    <string name="gateway">网关</string>
    <string name="transformLock">转移锁权限</string>
    <string name="customService">客服</string>
    <string name="aboutUs">关于我们</string>
    <string name="setting">设置</string>
    <string name="addLockGroup">添加锁组</string>
    <string name="keyManage">钥匙管理</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clearKey">清空钥匙</string>
    <string name="resetKey">重置钥匙</string>
    <string name="sendKey">发送钥匙</string>
    <string name="batchAuth">批量授权</string>
    <string name="editGroupName">编辑组名</string>
    <string name="cancel">取消</string>
    <string name="systemSetting">系统设置</string>
    <string name="editUserInfo">编辑资料</string>
    <string name="defaultShowPhone">默认显示手机号码</string>
    <string name="nickName">昵称</string>
    <string name="userHead">用户头像</string>
    <string name="phoneNum">手机号码</string>
    <string name="registTime">注册时间</string>
    <string name="nextStep">下一步</string>
    <string name="receiverSetting">接收者设置</string>
    <string name="account">账号</string>
    <string name="inputReceiverPhone">请输入接收者手机号</string>
    <string name="receiverTip">* 选中的锁设备将会转移到您输入的账号中，您将失去锁管理权。</string>
    <string name="transformLockTip">* 本次共转移%d把智能锁</string>
    <string name="ensure">确认</string>
    <string name="SystemSetting">系统设置</string>
    <string name="resetPW">重置密码</string>
    <string name="checkVersion">检测新版本</string>
    <string name="userProtocol">用户协议</string>
    <string name="privacyPolicy">隐私政策</string>
    <string name="mine_logout">退出登录</string>
    <string name="contactNumber">联系电话</string>
    <string name="_contactNum">18125067770</string>
    <string name="officialWebSite">官方网站</string>
    <string name="_officialWebSite">http://www.zhunilink.com</string>
    <string name="developWebSite">开发平台网站</string>
    <string name="BusinessMail">业务合作邮箱</string>
    <string name="_businessMail">smarthome@ut.cn</string>
    <string name="companyName">珠海优特物联科技有限公司</string>
    <string name="inputGroupName">请输入组名</string>
    <string name="setHeadImg">设置头像</string>
    <string name="takePhoto">照相</string>
    <string name="localImg">本地图片</string>
    <string name="needWritePermission">请先授予SD卡写入权限</string>
    <string name="serviceErr">服务器开小差</string>
    <string name="uploadHeadImgSuccess">上传头像成功</string>
    <string name="editUserName">修改昵称</string>
    <string name="delGroup">删除分组</string>
    <string name="confirmDelGroup">确定删除组吗？锁设备不会被删除。</string>
    <string name="sendAgain">重新发送</string>
    <string name="inputName">请输入昵称</string>
    <string name="mine_limitTime">限时</string>
    <string name="mine_forever">永久</string>
    <string name="mine_once">单次</string>
    <string name="mine_loop">循环</string>
    <string name="confirmDeleteKey">确定删除该钥匙吗？删除会在用户APP联网后生效。</string>
    <string name="isLogout">是否退出登录?</string>
    <string name="newestVersion">已经是最新版本</string>
    <string name="input_11">请输入1-11位中文、字母或数字</string>
    <string name="input_20">请输入1-20位中文、字母或数字</string>
    <string name="smartLock">优特智能云锁</string>
    <string name="getVerifyCode">获取验证码</string>
    <string name="isCallToCustomService">是否拨打客服热线？</string>
    <string name="cannotTransformToSelf">不能转移给自己</string>

    <string name="status_sending">发送中</string>
    <string name="status_frozening">冻结中</string>
    <string name="status_cancel_frozen">解除冻结中</string>
    <string name="status_delete">删除中</string>
    <string name="status_authorize">授权中</string>
    <string name="status_cancel_authorize">取消授权中</string>
    <string name="status_fix">修改中</string>
    <string name="lock_key_status_normal">正常</string>
    <string name="status_has_frozen">已冻结</string>
    <string name="status_has_deleted">已删除</string>
    <string name="status_has_invailed">已失效</string>
    <string name="status_out_of_date">已过期</string>
    <string name="status_normal">正常</string>
    <string name="mine_app_need_contact_permission">APP需要你的允许获取联系人权限</string>
    <string name="mine_setting">设置</string>
    <string name="mine_cancel">取消</string>

    <string-array name="key_status">
        <item>未知</item>
        <item>发送中</item>
        <item>冻结中</item>
        <item>解除冻结中</item>
        <item>删除中</item>
        <item>授权中</item>
        <item>取消授权中</item>
        <item>修改中</item>
        <item>正常</item>
        <item>已冻结</item>
        <item>已删除</item>
        <item>已失效</item>
        <item>已过期</item>
    </string-array>
</resources>
