<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.AboutUsActivity">

        <include
            android:id="@+id/include9"
            layout="@layout/toolbar_white" />


        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_item_bottom"
            android:paddingLeft="0dp">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="@dimen/base_80dp"
                android:layout_height="@dimen/base_80dp"
                android:layout_marginTop="@dimen/base_30dp"
                android:layout_marginBottom="1px"
                app:layout_constraintBottom_toTopOf="@+id/appName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/cloudlock_icon" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="@dimen/base_80dp"
                android:layout_height="@dimen/base_80dp"
                android:layout_marginBottom="@dimen/base_8dp"
                android:background="@drawable/bg_cloudlock"
                android:gravity="center"
                android:text="优特智能云锁\n V1.0"
                android:textColor="@color/gray6"
                android:textSize="@dimen/xs"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <!--  -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_item_bottom"
            android:orientation="vertical"
            android:paddingStart="0dp"
            android:paddingEnd="0dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_52dp"
                android:paddingStart="@dimen/base_16dp"
                android:paddingEnd="@dimen/base_16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/contactNumber"
                    android:textColor="@color/gray6"
                    android:textSize="@dimen/s" />

                <TextView
                    android:id="@+id/phone_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="@dimen/base_8dp"
                    android:text="@string/_contactNum"
                    android:textColor="@color/gray3"
                    android:textSize="@dimen/s" />
            </FrameLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_gravity="bottom"
                android:background="#dfdfdf" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_52dp"
                android:paddingStart="@dimen/base_16dp"
                android:paddingEnd="@dimen/base_16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/officialWebSite"
                    android:textColor="@color/gray6"
                    android:textSize="@dimen/s" />

                <TextView
                    android:id="@+id/office_web_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="@dimen/base_8dp"
                    android:text="@string/_officialWebSite"
                    android:textColor="@color/gray3"
                    android:textSize="@dimen/s" />
            </FrameLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_gravity="bottom"
                android:background="#dfdfdf" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_52dp"
                android:paddingStart="@dimen/base_16dp"
                android:paddingEnd="@dimen/base_16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/developWebSite"
                    android:textColor="@color/gray6"
                    android:textSize="@dimen/s" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="@dimen/base_8dp"
                    android:text="@string/_officialWebSite"
                    android:textColor="@color/gray3"
                    android:textSize="@dimen/s" />
            </FrameLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_gravity="bottom"
                android:background="#dfdfdf" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_52dp"
                android:paddingStart="@dimen/base_16dp"
                android:paddingEnd="@dimen/base_16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/BusinessMail"
                    android:textColor="@color/gray6"
                    android:textSize="@dimen/s" />

                <TextView
                    android:id="@+id/company_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="@dimen/base_8dp"
                    android:text="@string/_businessMail"
                    android:textColor="@color/gray3"
                    android:textSize="@dimen/s" />
            </FrameLayout>
        </LinearLayout>


        <View
            android:layout_width="1px"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/companyName"
            android:textColor="@color/grayC"
            android:textSize="@dimen/xxs" />
    </LinearLayout>
</layout>