<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="viewmodel"
            type="com.ut.module_mine.viewModel.ReceiverSettingViewModel"/>
    </data>
    
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ReceiverSettingActivity">

        <include
            android:id="@+id/include17"
            layout="@layout/toolbar_white" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include17">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_item_bottom"
                android:paddingLeft="@dimen/base_16dp"
                android:gravity="center_vertical"
                android:text="@string/account"
                android:textColor="@color/gray6"
                android:textSize="@dimen/s"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_receiverPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/base_16dp"
                android:background="@null"
                android:hint="@string/inputReceiverPhone"
                android:inputType="phone"
                android:maxLength="11"
                android:text="@={viewmodel.receiverPhone}"
                android:textColor="@color/gray3"
                android:textColorHint="@color/grayC"
                android:textSize="@dimen/s"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
                app:layout_constraintEnd_toStartOf="@+id/addressBook" />

            <ImageView
                android:id="@+id/addressBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/base_16dp"
                app:layout_constraintBottom_toBottomOf="@+id/et_receiverPhone"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/et_receiverPhone"
                app:srcCompat="@drawable/address_book" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_16dp"
            android:text="@string/receiverTip"
            android:textColor="@color/receiverTipColor"
            android:textSize="@dimen/xs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout8" />

        <Button
            android:id="@+id/nextStep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?android:borderlessButtonStyle"
            android:layout_marginStart="@dimen/base_16dp"
            android:layout_marginEnd="@dimen/base_16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/nextStep"
            android:textColor="@android:color/white"
            android:background="@drawable/select_bg_bt"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>