<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SystemSettingActivity">

        <include
            android:id="@+id/include18"
            layout="@layout/toolbar_white" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include18">

            <TextView
                android:id="@+id/resetPW"
                android:layout_width="0dp"
                android:layout_height="@dimen/base_52dp"
                android:background="@drawable/select_gray_e"
                android:clickable="true"
                android:drawableRight="@drawable/right_triangle"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/base_16dp"
                android:paddingRight="@dimen/base_16dp"
                android:text="@string/resetPW"
                android:textColor="@color/gray6"
                android:textSize="@dimen/s"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider6"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginStart="@dimen/base_16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resetPW" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout9"
                android:layout_width="0dp"
                android:layout_height="@dimen/base_52dp"
                android:background="@drawable/select_gray_e"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider6">

                <TextView
                    android:id="@+id/textView35"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/base_16dp"
                    android:text="@string/checkVersion"
                    android:textColor="@color/gray6"
                    android:textSize="@dimen/s"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView36"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/base_16dp"
                    android:drawableRight="@drawable/right_triangle"
                    android:drawablePadding="@dimen/base_16dp"
                    android:text="V2.0"
                    android:textColor="@color/gray6"
                    android:textSize="@dimen/m"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <View
                android:id="@+id/divider7"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginStart="@dimen/base_16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout9" />

            <TextView
                android:id="@+id/aboutUs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/select_bg_item_bottom"
                android:clickable="true"
                android:drawableRight="@drawable/right_triangle"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/base_16dp"
                android:paddingRight="@dimen/base_16dp"
                android:text="@string/aboutUs"
                android:textColor="@color/gray6"
                android:textSize="@dimen/s"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider7" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout10">

            <View
                android:id="@+id/divider15"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginStart="@dimen/base_16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView39" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/select_bg_item_up"
                android:drawableRight="@drawable/right_triangle"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/base_16dp"
                android:paddingRight="@dimen/base_16dp"
                android:text="@string/userProtocol"
                android:textColor="@color/gray6"
                android:textSize="@dimen/s"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/select_bg_item_bottom"
                android:drawableRight="@drawable/right_triangle"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/base_16dp"
                android:paddingRight="@dimen/base_16dp"
                android:text="@string/privacyPolicy"
                android:textColor="@color/gray6"
                android:textSize="@dimen/s"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider15" />
        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_16dp"
            android:layout_marginEnd="@dimen/base_16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/mine_logout"
            android:textColor="@android:color/white"
            android:textSize="@dimen/m"
            android:background="@drawable/select_bg_bt_red"
            style="?android:borderlessButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>