<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_16dp"
        android:text="@string/editUserName"
        android:textColor="@color/gray3"
        android:textSize="@dimen/m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/base_16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_border"
        android:gravity="center_vertical"
        android:hint="@string/input_11"
        android:inputType="textPersonName"
        android:maxLength="11"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="@dimen/s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <View
        android:id="@+id/divider14"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/base_16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_userName" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/select_bt"
        android:clickable="true"
        android:gravity="center"
        android:paddingTop="@dimen/base_16dp"
        android:paddingBottom="@dimen/base_16dp"
        android:text="@string/cancel"
        android:textSize="@dimen/m"
        app:layout_constraintEnd_toStartOf="@+id/confirm"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider14" />

    <TextView
        android:id="@+id/confirm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/select_bt"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/themeColor"
        android:textSize="@dimen/m"
        app:layout_constraintBottom_toBottomOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel"
        app:layout_constraintTop_toTopOf="@+id/cancel" />

    <View
        android:id="@+id/divider16"
        android:layout_width="0.5dp"
        android:layout_height="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancel" />

    <ImageView
        android:id="@+id/clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/et_userName"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/et_userName"
        app:layout_constraintTop_toTopOf="@+id/et_userName"
        app:srcCompat="@drawable/delete_selected" />

</android.support.constraint.ConstraintLayout>